# avx-video-processor

./: .gitignore  CMakeLists.txt  README.md
include/: processor.h
scripts/: run_benchmark.sh
src/: main.cpp  processor.cpp
